# yCMake

./: README.md
test1/src/: .cproject  CMakeLists.txt
test2/source/: CMakeLists.txt  main.cpp
